syntax = "proto3";
package shattered.protocol;
option java_package = "com.shattered.networking.proto";
option cc_enable_arenas = true;

message OpenConnection {
    string uuid = 1;
    string token = 2;
}

message CloseConnection {
    string uuid = 1;
}

message ServerTransferResponse {
    int32 serverType = 1;
    int32 response = 2;
}

message TransmitAccount {
    int64 accountId = 1;
    string accountName = 2;
    string email = 3;
    string password = 4;
    int32 accountLevel = 5;
}

message ServerAvailability {
    int32 type = 1;
}

message ServerAvailabilityResponse {
    bool available = 1;
}

message RequestRealm {
    string cuuid = 1;
}

message TransferConnection {
    string cuuid = 1;
    string token = 2;
    string host = 3;
    int32 port = 4;
}

message PVector {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}

message TransferToWorld {
    int32 account_id = 1;
    int32 permission_level = 2;
    string account_name = 3;
    int32 character_id = 4;
    string character_name = 5;
    string last_default_map_name = 6;
    int64 map_uuid = 7;
    PVector location = 8;
    PVector last_default_location = 9;
    string password  = 10;
    string cuuid = 11;
    string token = 12;
    string host = 13;
    int32 port = 14;
}

message TransferToRealm {
    string account_name = 1;
    string password = 2;
}

message WorldCharacterInformation {
    string cuuid = 1;
    string token = 2;
    int32 account_id = 3;
    int32 permission_level = 4;
    string account_name = 5;
    int32 character_id = 6;
    string character_name = 7;
    string last_default_map = 8;
    int64 map_uuid = 9;
    PVector location = 10;
    PVector last_default_location = 11;
    string password = 12;
}


message RequestNewTransferConnection {
    string tccuid = 1;
    string cuuid = 2;
    string token = 3;
}

message RequestWorldToRealmTransfer {
    string account_name = 1;
    string account_password = 2;
}